--- a/app/src/main/res/layout/fragment_customer_info.xml
+++ b/app/src/main/res/layout/fragment_customer_info.xml
@@ -7,18 +7,18 @@
 
     <ImageView
         android:id="@+id/iv_profile_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="110dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_bg" />
 
     <ImageView
         android:id="@+id/iv_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_profile_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_profile_bg"
         app:layout_constraintStart_toStartOf="@+id/iv_profile_bg"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="အမည်"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="@+id/tv_label_birth_date"
         app:layout_constraintTop_toTopOf="@+id/iv_profile_bg" />
 
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="မွေး‌နေ့"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/textView18"
         app:layout_constraintStart_toStartOf="@+id/textView18"
         app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />
@@ -50,10 +50,10 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:text="မှတ်ပုံတင်"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_profile_bg"
         app:layout_constraintStart_toEndOf="@+id/iv_profile_bg" />
 
@@ -61,10 +61,10 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:text="ဒေါ်ကလျာနွဲ့မူရာခင်"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView18"
         app:layout_constraintTop_toTopOf="@+id/tv_label_name" />
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:text="05-12-1967"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView21"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:text="၁၄/ဟသတ(နိုင်)၁၂၃၄၅၆"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
         app:layout_constraintStart_toStartOf="@+id/tv_birth_date" />
@@ -96,10 +96,9 @@
         android:id="@+id/tv_label_phNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:text="ဖုန်းနံပါတ်"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_name"
         app:layout_constraintStart_toEndOf="@+id/textView21"
         app:layout_constraintTop_toTopOf="@+id/tv_name" />
@@ -110,7 +109,7 @@
         android:layout_height="wrap_content"
         android:text="လိပ်စာ"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_birth_date"
         app:layout_constraintStart_toStartOf="@+id/tv_label_phNumber"
         app:layout_constraintTop_toTopOf="@+id/tv_birth_date" />
@@ -119,10 +118,10 @@
         android:id="@+id/tv_phNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:text="09 420 12 3456 "
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_phNumber"
         app:layout_constraintStart_toEndOf="@+id/tv_label_phNumber"
@@ -134,7 +133,7 @@
         android:layout_height="wrap_content"
         android:text="ဟင်္သာတမြို့နယ်, "
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_address"
         app:layout_constraintStart_toStartOf="@+id/tv_phNumber"
@@ -142,24 +141,28 @@
 
     <TextView
         android:id="@+id/tv_address_state"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="ဧရာဝတီတိုင်း‌‌‌ဒေသကြီး"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_address_township"
+        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
         app:layout_constraintStart_toEndOf="@+id/tv_address_township"
         app:layout_constraintTop_toTopOf="@+id/tv_address_township" />
 
     <TextView
         android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="ဘာရပ်ကွက် ဘာရွာ \nဘာလမ်း ဘယ်အိမ်နံပါတ်  "
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_address_township"
         app:layout_constraintTop_toBottomOf="@+id/tv_address_township" />
 
@@ -167,25 +170,25 @@
         android:id="@+id/btn_continue"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/background_btn"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="‌ရှေ့ဆက်မည်"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_label_address"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_address_state"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_label_phNumber" />
+        app:layout_constraintTop_toTopOf="@+id/tv_phNumber" />
 
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@color/label_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -197,10 +200,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="ဝယ်သူနှစ်သက်သည့်ပစ္စည်းများ"
         android:textColor="@color/primary_text"
-        android:textSize="30sp"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -209,7 +212,7 @@
         layout="@layout/include_customer_info"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
