--- a/app/src/main/res/layout/item_inventory_stock.xml
+++ b/app/src/main/res/layout/item_inventory_stock.xml
@@ -2,9 +2,9 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="500dp"
+    android:layout_width="380dp"
     android:layout_height="wrap_content"
-    android:layout_margin="32dp"
+    android:layout_margin="24dp"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,14 +13,16 @@
 
         <TextView
             android:id="@+id/tv_stock_code"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:text="SM-PRD-000000002"
             android:textColor="@color/primary"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/iv_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +30,7 @@
             android:id="@+id/iv_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_stock_code"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_stock_code"
@@ -36,9 +38,9 @@
 
         <ImageView
             android:id="@+id/iv_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_stock_code"
@@ -49,8 +51,8 @@
             android:id="@+id/edit_specification"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:gravity="start|top"
@@ -60,7 +62,7 @@
             android:paddingTop="16dp"
             android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_item"
