--- a/app/src/main/res/layout/dialog_stock_check.xml
+++ b/app/src/main/res/layout/dialog_stock_check.xml
@@ -14,14 +14,14 @@
         android:layout_marginTop="32dp"
         android:text="ဘောင်ချာနံပါတ် :"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:text="Stock ကုဒ်"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -52,7 +52,7 @@
             android:gravity="center"
             android:text="ရွှေ+ကျောက်အလေးချိန်(gm)"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:gravity="center"
             android:text="ယူမယ်"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -83,17 +83,17 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_continue"
         style="@android:style/Widget.Button"
-        android:background="@drawable/background_btn"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/background_btn"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
         android:text="‌ရှေ့ဆက်"
         android:textColor="@color/white"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:textSize="24sp"
-        android:paddingStart="64dp"
-        android:paddingEnd="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -106,5 +106,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_label_voucher_number"
         app:srcCompat="@drawable/close" />
+
+    <TextView
+        android:id="@+id/tv_voucher_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@color/primary_text"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_label_voucher_number"
+        app:layout_constraintStart_toEndOf="@+id/tv_label_voucher_number"
+        app:layout_constraintTop_toTopOf="@+id/tv_label_voucher_number" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
