--- a/app/src/main/res/layout/fragment_exchange_order.xml
+++ b/app/src/main/res/layout/fragment_exchange_order.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,22 +21,22 @@
             android:layout_height="wrap_content"
             android:text="Scan Voucher"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_voucher_balance"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_edit_text"
             android:ems="10"
-            android:inputType="number"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
             android:hint="Type or scan"
+            android:inputType="text"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <View
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view">
@@ -67,21 +67,21 @@
             android:layout_height="wrap_content"
             android:text="အိမ်ပါ‌ရွှေ ဘောင်ချာ"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_gold_from_home_voucher"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:inputType="number"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -100,21 +100,21 @@
             android:layout_height="wrap_content"
             android:text="ဘောင်ချာ‌‌‌‌ဟောင်းပေးသွင်း‌ငွေ"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_old_voucher_payment"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:inputType="number"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
@@ -133,21 +133,21 @@
             android:layout_height="wrap_content"
             android:text="ဝယ်သူတွင်ရှိသော ပွိုင့်"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_customer_point"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:inputType="number"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -166,26 +166,27 @@
             android:layout_height="wrap_content"
             android:text="Redeem ပွိုင့်"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_redeem_point"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_edit_text"
             android:ems="10"
             android:hint="Type"
             android:inputType="number"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -195,61 +196,55 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+
+        <View
+            android:id="@+id/view2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="1dp"
+            android:background="@color/label_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_skip"
+            style="@android:style/Widget.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/background_edit_text"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
+            android:text="ကျော်မည်"
+            android:textColor="@color/primary"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view2" />
 
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/label_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_continue"
+            style="@android:style/Widget.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/background_btn"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
+            android:text="ရှေ့ဆက်မည်"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view2" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_skip"
-                style="@android:style/Widget.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="32dp"
-                android:background="@drawable/background_edit_text"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp"
-                android:text="ကျော်မည်"
-                android:textColor="@color/primary"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_continue"
-                style="@android:style/Widget.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="32dp"
-                android:background="@drawable/background_btn"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp"
-                android:text="ရှေ့ဆက်မည်"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
