--- a/app/src/main/res/layout/fragment_gold_from_home.xml
+++ b/app/src/main/res/layout/fragment_gold_from_home.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -11,8 +15,8 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:checked="true"
-        android:scaleX="2"
-        android:scaleY="2"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         app:layout_constraintBottom_toBottomOf="@+id/edit_voucher_code"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/edit_voucher_code"
@@ -25,120 +29,118 @@
         android:layout_marginStart="16dp"
         android:text="ဆိုင်ဘောင်ချာ"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/checkBox"
         app:layout_constraintStart_toEndOf="@+id/checkBox"
         app:layout_constraintTop_toTopOf="@+id/checkBox" />
 
-    <EditText
-        android:id="@+id/edit_voucher_code"
-        android:layout_width="400dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="108dp"
-        android:background="@drawable/background_edit_text"
-        android:drawableEnd="@drawable/type_scan"
-        android:drawablePadding="24dp"
-        android:ems="10"
-        android:hint="Type or Scan Voucher Code"
-        android:inputType="textPersonName"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:textColorHint="@color/label_text"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_label_voucher_code"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/edit_voucher_code"
+            android:layout_width="400dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/background_edit_text"
+            android:drawableEnd="@drawable/type_scan"
+            android:drawablePadding="24dp"
+            android:ems="10"
+            android:hint="Type or Scan Voucher Code"
+            android:inputType="textPersonName"
+            android:paddingStart="16dp"
+            android:paddingEnd="32dp"
+            android:textColorHint="@color/label_text"
+            android:textSize="22sp"
+            app:layout_constraintStart_toEndOf="@+id/tv_label_voucher_code"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/image_btn_select"
-        android:background="@drawable/background_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:src="@drawable/right"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_voucher_code"
-        app:layout_constraintStart_toEndOf="@+id/edit_voucher_code"
-        app:layout_constraintTop_toTopOf="@+id/edit_voucher_code" />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/image_btn_select"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:background="@drawable/background_btn"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:src="@drawable/right"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_voucher_code"
+            app:layout_constraintStart_toEndOf="@+id/edit_voucher_code"
+            app:layout_constraintTop_toTopOf="@+id/edit_voucher_code" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:orientation="horizontal"
-        android:background="@color/primary"
-        android:divider="?android:dividerHorizontal"
-        android:showDividers="middle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_voucher_code">
-
-        <TextView
-            android:id="@+id/tv_resell_item"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="ပြန်ရောင်းထည်အမည်"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="70dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="32dp"
+            android:background="@color/primary"
+            android:divider="?android:dividerHorizontal"
+            android:orientation="horizontal"
+            android:showDividers="middle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_voucher_code">
 
-        <TextView
-            android:id="@+id/tv_payMoney"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.1"
-            android:gravity="center"
-            android:text="‌ဘောင်ချာဖွင့်ဝယ်ပေးငွေ"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_resell_item"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="ပြန်ရောင်းထည်အမည်"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_gold_weight"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.1"
-            android:gravity="center"
-            android:text="‌ဘောင်ချာသို့ထည့်ပေး‌ရွှေချိန်"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_payMoney"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.1"
+                android:gravity="center"
+                android:text="‌ဘောင်ချာဖွင့်ဝယ်ပေးငွေ"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_pledgeMoney"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.1"
-            android:gravity="center"
-            android:text="အပေါင်ရမည့်ငွေ"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_gold_weight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.1"
+                android:gravity="center"
+                android:text="‌ဘောင်ချာသို့ထည့်ပေး \n ‌ရွှေချိန်"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_blank"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_pledgeMoney"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.1"
+                android:gravity="center"
+                android:text="အပေါင်ရမည့်ငွေ"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:id="@+id/tv_blank"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.2" />
+        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <View
                 android:id="@+id/view"
@@ -172,13 +174,13 @@
                         android:layout_height="wrap_content"
                         android:text="တွက်ပြီး အပေါင်ရမည့်ငွေ"
                         android:textColor="@color/primary_text"
-                        android:textSize="24sp"
+                        android:textSize="22sp"
                         android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/edit_payMoney"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="70dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/background_edit_text2"
                         android:ems="10"
@@ -203,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:text="‌ဘောင်ချာသို့ထည့်ပေး‌ရွှေချိန်"
                         android:textColor="@color/primary_text"
-                        android:textSize="24sp"
+                        android:textSize="22sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -215,7 +217,7 @@
                         <EditText
                             android:id="@+id/edit_K"
                             android:layout_width="match_parent"
-                            android:layout_height="80dp"
+                            android:layout_height="70dp"
                             android:layout_marginEnd="16dp"
                             android:layout_weight="1"
                             android:background="@drawable/background_edit_text2"
@@ -229,7 +231,7 @@
                         <EditText
                             android:id="@+id/edit_P"
                             android:layout_width="match_parent"
-                            android:layout_height="80dp"
+                            android:layout_height="70dp"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_weight="1"
@@ -244,7 +246,7 @@
                         <EditText
                             android:id="@+id/edit_Y"
                             android:layout_width="match_parent"
-                            android:layout_height="80dp"
+                            android:layout_height="70dp"
                             android:layout_marginStart="16dp"
                             android:layout_weight="1"
                             android:background="@drawable/background_edit_text2"
@@ -271,13 +273,13 @@
                         android:layout_height="wrap_content"
                         android:text="ဘောင်ချာဖွင့်ဝယ်ပေးငွေ"
                         android:textColor="@color/primary_text"
-                        android:textSize="24sp"
+                        android:textSize="22sp"
                         android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/edit_pledgeMoney"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="70dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/background_edit_text2"
                         android:ems="10"
@@ -298,11 +300,11 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/background_btn"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
                 android:text="‌ရှေ့ဆက်"
                 android:textColor="@color/white"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -310,19 +312,19 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_other"
-                android:background="@drawable/background_btn"
                 style="@android:style/Widget.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp"
+                android:background="@drawable/background_btn"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
                 android:text="အခြား"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="24sp"
+                android:textSize="22sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
@@ -334,16 +336,16 @@
                 android:layout_height="80dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/background_edit_text"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
                 android:text="ကျော်မည်"
                 android:textColor="@color/primary"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_continue"
                 app:layout_constraintEnd_toStartOf="@+id/btn_continue"
                 app:layout_constraintTop_toTopOf="@+id/btn_continue" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
