--- a/app/src/main/res/layout/fragment_scan_stock.xml
+++ b/app/src/main/res/layout/fragment_scan_stock.xml
@@ -11,45 +11,44 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="Stock Code"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:textColor="@color/primary_text"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/edit_stock_code"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/edit_stock_code" />
 
     <EditText
         android:id="@+id/edit_stock_code"
-        android:layout_width="500dp"
-        android:layout_height="80dp"
+        android:layout_width="400dp"
+        android:layout_height="70dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/background_edit_text"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
         android:hint="Type or Scan"
+        android:inputType="textPersonName"
+        android:paddingStart="16dp"
+        android:paddingEnd="32dp"
         android:textColor="@color/primary_text"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toEndOf="@+id/tv_label_stock_code"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_continue"
         style="@android:style/Widget.Button"
-        android:background="@drawable/background_btn"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/background_btn"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
         android:text="ရှေ့ဆက်"
         android:textColor="@color/white"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:textSize="24sp"
-        android:paddingStart="64dp"
-        android:paddingEnd="64dp"
         app:layout_constraintBottom_toBottomOf="@+id/edit_stock_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/edit_stock_code" />
@@ -71,13 +70,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        app:spanCount="6"
+        app:spanCount="5"
         tools:listitem="@layout/item_stock_code_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
