--- a/app/src/main/res/layout/include_radio_pawn_item_sale.xml
+++ b/app/src/main/res/layout/include_radio_pawn_item_sale.xml
@@ -9,24 +9,24 @@
         android:id="@+id/btn_click"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/background_btn"
-        android:paddingStart="64dp"
-        android:paddingEnd="64dp"
-        android:text="အရင်းသွင်း ခွဲရွေး"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        android:text="ရောင်းချ"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="600dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="470dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,31 +40,30 @@
             android:gravity="center|start"
             android:text="အတိုးရက်"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_interest_date"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:inputType="number"
             android:paddingStart="16dp"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="600dp"
+        android:layout_width="470dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
             android:id="@+id/tv_label_interest_charge"
@@ -74,31 +73,30 @@
             android:gravity="center|start"
             android:text="အတိုးကျသင့်ငွေ"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/edit_interest_charge"
+            android:id="@+id/edit_charge"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:background="@drawable/background_edit_text2"
             android:ems="10"
             android:inputType="number"
             android:paddingStart="16dp"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="600dp"
+        android:layout_width="470dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout1">
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
         <TextView
             android:id="@+id/tv_label_investmentPay"
@@ -108,28 +106,27 @@
             android:gravity="center|start"
             android:text="အရင်းသွင်းငွေ"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edit_investmentPay"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:background="@drawable/background_edit_text"
             android:ems="10"
             android:hint="Type"
             android:inputType="number"
             android:paddingStart="16dp"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="600dp"
+        android:layout_width="470dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
@@ -143,25 +140,24 @@
             android:gravity="center|start"
             android:text="အိမ်ပါရွှေ"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_goldFromHome"
             style="@android:style/Widget.Button"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="70dp"
             android:layout_marginEnd="100dp"
             android:layout_weight="1"
             android:background="@drawable/background_edit_text"
-            android:drawableStart="@drawable/minus"
+            android:drawableStart="@drawable/pen"
             android:drawableTint="@color/primary"
-            android:paddingStart="64dp"
-            android:paddingEnd="64dp"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
             android:text="အိမ်ပါရွှေ"
             android:textColor="@color/primary"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
     </LinearLayout>
