--- a/app/src/main/res/layout/item_customer_fav_items.xml
+++ b/app/src/main/res/layout/item_customer_fav_items.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="32dp"
     android:layout_marginStart="32dp"
-    android:layout_marginBottom="24dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="3dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,9 +16,9 @@
 
         <ImageView
             android:id="@+id/iv_customerfavItem"
+            android:layout_width="220dp"
+            android:layout_height="200dp"
             android:scaleType="fitXY"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,10 +29,9 @@
             android:id="@+id/tv_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="စတားဝေးကြိုး"
-            android:textSize="24sp"
             android:textColor="@color/primary_text"
+            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="@+id/iv_customerfavItem"
             app:layout_constraintStart_toStartOf="@+id/iv_customerfavItem"
             app:layout_constraintTop_toBottomOf="@+id/iv_customerfavItem" />
@@ -40,11 +40,9 @@
             android:id="@+id/tv_item_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
             android:text="400,000 ကျပ်"
-            android:textSize="24sp"
             android:textColor="@color/primary_text"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
             app:layout_constraintStart_toStartOf="@+id/tv_item_name"
@@ -54,11 +52,10 @@
             android:id="@+id/tv_arround"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="ဝန်းကျင်"
             android:textColor="@color/primary_text"
-            android:textSize="16sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_item_price"
             app:layout_constraintStart_toStartOf="@+id/tv_item_price"
