--- a/app/src/main/res/layout/item_stock_check.xml
+++ b/app/src/main/res/layout/item_stock_check.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <TextView
@@ -16,24 +16,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="start|center"
+            android:paddingStart="32dp"
             android:text="SM-PRD-000000001"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="start|center"
-            android:paddingStart="32dp"/>
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_gold_and_gem_weight"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.1"
+            android:gravity="start|center"
+            android:paddingStart="32dp"
             android:text="2.45"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="start|center"
-            android:paddingStart="32dp"/>
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -41,9 +41,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1.3"
             android:gravity="start|center"
-            android:paddingStart="32dp"/>
+            android:paddingStart="32dp" />
 
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
