--- a/app/src/main/res/layout/spinner_text_style_2.xml
+++ b/app/src/main/res/layout/spinner_text_style_2.xml
@@ -2,10 +2,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textColor="@color/primary_text"
+    android:textColor="@color/primary"
     android:textSize="22sp"
-    android:gravity="start|center"
-    android:paddingStart="16dp"
-    >
+    android:textStyle="bold"
+    android:gravity="center"
+    android:paddingStart="16dp">
 
 </TextView>
